fix popout img overflow

--- a/src/Members.css
+++ b/src/Members.css
@@ -86,6 +86,7 @@
     background-color: rgba(0,0,0,.2);
     box-shadow: 2px 2px 10px 2px;
     backdrop-filter:blur(5px);
+    overflow: visible;
 }
 
 /* user popup header */
